- StubScreen is removed  - small fix: formatting

--- a/app/src/main/res/layout/fragment_refill_list.xml
+++ b/app/src/main/res/layout/fragment_refill_list.xml
@@ -61,8 +61,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_small"
-        android:layout_marginTop="@dimen/margin_small"
         android:layout_marginEnd="@dimen/margin_small"
+        android:layout_marginTop="@dimen/margin_small"
         android:layout_marginBottom="@dimen/margin_small"
         android:text="@string/all_date"
         android:textStyle="bold"
@@ -76,12 +76,12 @@
         android:id="@+id/load_text_vew"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_small"
         android:layout_marginEnd="@dimen/margin_small"
+        android:layout_marginTop="@dimen/margin_small"
         android:layout_marginBottom="@dimen/margin_small"
         android:text="@string/all_l"
         android:textStyle="bold"
-        app:layout_constraintHorizontal_weight="0.5"
+        app:layout_constraintHorizontal_weight="0.3"
         app:layout_constraintStart_toEndOf="@+id/date_text_vew"
         app:layout_constraintEnd_toStartOf="@id/consumption_text_vew"
         app:layout_constraintTop_toBottomOf="@+id/filter_view_group" />
@@ -90,12 +90,12 @@
         android:id="@+id/consumption_text_vew"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_small"
         android:layout_marginEnd="@dimen/margin_small"
+        android:layout_marginTop="@dimen/margin_small"
         android:layout_marginBottom="@dimen/margin_small"
         android:text="@string/refill_details_l_per_100km"
         android:textStyle="bold"
-        app:layout_constraintHorizontal_weight="0.5"
+        app:layout_constraintHorizontal_weight="0.7"
         app:layout_constraintStart_toEndOf="@+id/load_text_vew"
         app:layout_constraintEnd_toStartOf="@id/traffic_mode_text_vew"
         app:layout_constraintTop_toBottomOf="@+id/filter_view_group" />
@@ -104,8 +104,8 @@
         android:id="@+id/traffic_mode_text_vew"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_small"
         android:layout_marginEnd="@dimen/margin_small"
+        android:layout_marginTop="@dimen/margin_small"
         android:layout_marginBottom="@dimen/margin_small"
         android:text="@string/all_traffic"
         android:textStyle="bold"
@@ -118,14 +118,14 @@
         android:id="@+id/fuel_type_text_vew"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_small"
         android:layout_marginEnd="@dimen/margin_small"
+        android:layout_marginTop="@dimen/margin_small"
         android:layout_marginBottom="@dimen/margin_small"
         android:text="@string/all_fuel"
         android:textStyle="bold"
         android:visibility="gone"
         tools:visibility="visible"
-        app:layout_constraintHorizontal_weight="1.0"
+        app:layout_constraintHorizontal_weight="0.5"
         app:layout_constraintStart_toEndOf="@+id/traffic_mode_text_vew"
         app:layout_constraintEnd_toStartOf="@id/note_text_vew"
         app:layout_constraintTop_toBottomOf="@+id/filter_view_group" />
@@ -134,13 +134,13 @@
         android:id="@+id/note_text_vew"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_small"
-        android:layout_marginTop="@dimen/margin_small"
         android:layout_marginEnd="@dimen/margin_small"
+        android:layout_marginTop="@dimen/margin_small"
         android:layout_marginBottom="@dimen/margin_small"
         android:text="@string/all_note"
         android:textStyle="bold"
-        app:layout_constraintHorizontal_weight="0.5"
+        android:gravity="center_horizontal"
+        app:layout_constraintHorizontal_weight="0.4"
         app:layout_constraintStart_toEndOf="@+id/fuel_type_text_vew"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/filter_view_group" />
