- implemented: Backup/Restore DB feature. DB backup is put into external storage > Download/Backup folder  - increased min android SDK from 21 to 24  - some kotlin extensions are added  - SingleLiveDataEvent is added

--- a/app/src/main/res/menu/menu_refill_list.xml
+++ b/app/src/main/res/menu/menu_refill_list.xml
@@ -8,4 +8,22 @@
         android:icon="@drawable/ic_filter"
         app:showAsAction="ifRoom"
         />
+
+    <item
+        android:id="@+id/action_backup_create"
+        android:title="@string/refill_list_create_backup_menu"
+        android:orderInCategory="1"
+        android:icon="@android:drawable/ic_menu_save"
+        app:showAsAction="never"
+        android:visible="false"
+        />
+
+    <item
+        android:id="@+id/action_backup_restore"
+        android:title="@string/refill_list_restore_backup_menu"
+        android:orderInCategory="1"
+        android:icon="@android:drawable/ic_menu_save"
+        app:showAsAction="never"
+        android:visible="false"
+        />
 </menu>
