--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -12,7 +12,7 @@
         android:title="@string/title_petrol" />
 
     <item
-        android:id="@+id/navigation_service"
+        android:id="@+id/navigation_all"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_all" />
 
