--- a/app/src/main/res/menu/menu_refill_list.xml
+++ b/app/src/main/res/menu/menu_refill_list.xml
@@ -4,26 +4,33 @@
     <item
         android:id="@+id/action_filter"
         android:title="@string/refill_list_filter_title"
-        android:orderInCategory="1"
+        android:orderInCategory="2"
         android:icon="@drawable/ic_filter"
-        app:showAsAction="ifRoom"
-        />
+        app:showAsAction="ifRoom"/>
 
     <item
-        android:id="@+id/action_backup_create"
-        android:title="@string/refill_list_create_backup_menu"
-        android:orderInCategory="1"
-        android:icon="@android:drawable/ic_menu_save"
-        app:showAsAction="never"
-        android:visible="false"
-        />
+        android:id="@+id/action_more"
+        android:icon="@android:drawable/ic_menu_more"
+        android:title=""
+        android:orderInCategory="5"
+        app:showAsAction="always"
+        android:visible="false">
+        <menu>
 
-    <item
-        android:id="@+id/action_backup_restore"
-        android:title="@string/refill_list_restore_backup_menu"
-        android:orderInCategory="1"
-        android:icon="@android:drawable/ic_menu_save"
-        app:showAsAction="never"
-        android:visible="false"
-        />
+            <item
+                android:id="@+id/action_backup_create"
+                android:title="@string/refill_list_create_backup_menu"
+                android:orderInCategory="1"
+                android:icon="@drawable/ic_backup"
+                app:showAsAction="ifRoom"/>
+
+            <item
+                android:id="@+id/action_backup_restore"
+                android:title="@string/refill_list_restore_backup_menu"
+                android:orderInCategory="1"
+                android:icon="@drawable/ic_backup_restore"
+                app:showAsAction="ifRoom"/>
+
+        </menu>
+    </item>
 </menu>
