--- a/app/src/main/res/layout/fragment_refill_list.xml
+++ b/app/src/main/res/layout/fragment_refill_list.xml
@@ -177,7 +177,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_medium"
         android:layout_marginBottom="@dimen/margin_big"
-        android:src="@drawable/ic_add"
+        app:srcCompat="@drawable/ic_add"
+        app:tint="@android:color/white"
+        app:backgroundTint="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
